@startuml Diagramme de base de données
left to right direction

entity "Utilisateur" as UTILISATEUR {
    __id_user__: INTEGER
    pseudo: VARCHAR (60)
    adresse_mail: VARCHAR (100)
    mot_de_passe: VARCHAR (10)
    date_creation: DATE
}

entity "Film" as FILM {
    __id_film__: INT
    titre: VARCHAR (200)
    genre: VARCHAR (100)
    date_de_sortie: DATE
    langue_originale: VARCHAR (100)
    resume: VARCHAR (500)
}

entity "Avis" as AVIS {
    __id_film__: INTEGER
    __id_utilisateur__: INTEGER
    commentaire: VARCHAR (400)
    note: INTEGER
}

entity "Abonnes" as ABONNES {
    __id_user__: INTEGER
    __id_eclaireur__: INTEGER
}

' Relations pour positionner Avis entre Utilisateur et Film
UTILISATEUR -- AVIS
FILM -- AVIS

' Relation avec Abonnes sous Utilisateur
UTILISATEUR --down-- ABONNES
UTILISATEUR --down-- ABONNES

@enduml



